--- a/PowerPoint Remote/wwwroot/style.css
+++ b/PowerPoint Remote/wwwroot/style.css
@@ -7,16 +7,30 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     transition: background-image 1s ease-in-out;
+    overflow:hidden;
 }
 
 #main {
     height: 100vh;
     width: 100%;
+    position: relative;
+}
+
+#preview{
+    z-index: -1;
+    width: 100%;
+    height: auto;
+    max-height: 100%;
+    object-fit:contain;
+    position: absolute;
+    top:0;
+    left: 0;
 }
 
 #controls{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    position:relative;
 }
 
 button {
