--- a/PowerPoint Remote/MainWindow.xaml
+++ b/PowerPoint Remote/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         TitlebarHeight="35"
+        Icon="Resources/pptr.ico"
         TitlebarBackground="{DynamicResource TitleBar}" 
         Title="PowerPoint Remote" Height="450" Width="450">
     <commons:DefaultWindow.TitlebarContent>
